# doki-ida

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  ida-plugin.json
.github/workflows/: cmake-windows-ida-sdk.yml
assets/: ATTRIBUTION.md
definitions/: darkness.dark.master.definition.json  darkness.light.master.definition.json  rem.master.definition.json  zero.two.obsidian.master.definition.json  zero.two.sakura.master.definition.json
src/: plugin.cpp
src/doki/: apply.cpp  apply.h  assets.cpp  assets.h  color.cpp  color.h  config.cpp  config.h  css.cpp  css.h  installer.cpp  installer.h  log.h  overlay.cpp  overlay.h  palette.cpp  palette.h  paths.cpp  paths.h  registry.cpp  registry.h  selftest.cpp  selftest.h  theme.cpp  theme.h  ui.cpp  ui.h
tools/: apply_live.py  colortest.py  deploy.ps1  fetch_assets.ps1  fetch_upstream.ps1  generate_theme_catalog.ps1  install_themes.py  loadcheck.py  package.ps1  selftest_driver.py
